# genwrap

./: .gitmodules  CMakeLists.txt  README.md
public/genwrap/: genwrap.h  windows.h  wrapper_internal.h
src/: genwrap.cpp  main.cpp  windows.cpp
src/wrapper/: wrapper.cpp
